--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,8 @@ buildscript {
     repositories {
         google()
         jcenter()
-        mavenLocal()
+        mavenCentral()
+        // mavenLocal()
         maven {
             setUrl("https://maven.pkg.jetbrains.space/public/p/kotlinx-html/maven")
             content {
@@ -16,7 +17,6 @@ buildscript {
         classpath "com.android.tools.build:gradle:4.1.3"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath("org.jetbrains.dokka:dokka-gradle-plugin:1.4.30")
-
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
