--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,8 @@ buildscript {
                 includeGroup("org.jetbrains.kotlinx")
             }
         }
+        maven { url "https://mirrors.tencent.com/repository/maven/tencent_public" }
+        maven {	url "https://mirrors.tencent.com/repository/maven/qmsp-oaid2" }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.3"
@@ -19,6 +21,8 @@ buildscript {
         classpath("org.jetbrains.dokka:dokka-gradle-plugin:1.4.30")
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+
+        classpath 'com.github.kezong:fat-aar:1.3.6'
     }
 }
 
@@ -28,6 +32,8 @@ allprojects {
         mavenCentral()
 //        mavenLocal()
         jcenter()
+        maven { url "https://mirrors.tencent.com/repository/maven/tencent_public" }
+        maven {	url "https://mirrors.tencent.com/repository/maven/qmsp-oaid2" }
     }
 }
 
