--- a/settings.gradle
+++ b/settings.gradle
@@ -2,9 +2,16 @@ rootProject.name = "smh-sdk-android"
 
 include ":xmlCompiler"
 include ":smh-sdk-android"
-include ":cos-android"
+// include ":cos-android"
 include ":xmlAnnoation"
 include ":cos-android-ktx"
-include ":foundation"
+// include ":foundation"
 include ":smh"
+
+//project(':smh-sdk-android').projectDir = new File(rootDir, '../smh-android/smh')
+// project(':foundation').projectDir = new File(rootDir, '../../QCloudAndroid/library/QCloudFoundation/foundation')
+// project(':cos-android').projectDir = new File(rootDir, '../../QCloudAndroid/library/QCloudCosXml/cos-android')
+// project(':cos-android-ktx').projectDir = new File(rootDir, '../../QCloudAndroid/library/QCloudCosXml/cosxml-ktx')
+// project(':xmlAnnoation').projectDir      = new File(rootDir, '../../QCloudAndroid/library/QCloudXml/xmlAnnoation')
+// project(':xmlCompiler').projectDir       = new File(rootDir, '../../QCloudAndroid/library/QCloudXml/xmlCompiler')
 
