--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,6 @@ buildscript {
     ext.kotlin_version = "1.4.31"
     repositories {
         google()
-        jcenter()
         mavenCentral()
         // mavenLocal()
         maven {
@@ -12,13 +11,17 @@ buildscript {
                 includeGroup("org.jetbrains.kotlinx")
             }
         }
+        maven { url "https://mirrors.tencent.com/repository/maven/tencent_public" }
+        maven {	url "https://mirrors.tencent.com/repository/maven/qmsp-oaid2" }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.3"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath("org.jetbrains.dokka:dokka-gradle-plugin:1.4.30")
+        classpath("org.jetbrains.dokka:dokka-gradle-plugin:1.4.32")
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+
+        classpath 'com.github.kezong:fat-aar:1.3.6'
     }
 }
 
@@ -27,7 +30,8 @@ allprojects {
         google()
         mavenCentral()
 //        mavenLocal()
-        jcenter()
+        maven { url "https://mirrors.tencent.com/repository/maven/tencent_public" }
+        maven {	url "https://mirrors.tencent.com/repository/maven/qmsp-oaid2" }
     }
 }
 
